--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -1686,7 +1686,25 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train.astype(np.float64))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "knn_clf = KNeighborsClassifier()\n",
+    "knn_clf.fit(X_train_scaled, y_train)\n",
+    "y_predictions = knn_clf.predict(X_train)\n",
+    "accuracy_score(y_train, y_predictions)"
+   ]
   }
  ],
  "metadata": {
