--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "dict_keys(['data', 'target', 'frame', 'feature_names', 'target_names', 'DESCR', 'details', 'categories', 'url'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "\"**Author**: Yann LeCun, Corinna Cortes, Christopher J.C. Burges  \\n**Source**: [MNIST Website](http://yann.lecun.com/exdb/mnist/) - Date unknown  \\n**Please cite**:  \\n\\nThe MNIST database of handwritten digits with 784 features, raw data available at: http://yann.lecun.com/exdb/mnist/. It can be split in a training set of the first 60,000 examples, and a test set of 10,000 examples  \\n\\nIt is a subset of a larger set available from NIST. The digits have been size-normalized and centered in a fixed-size image. It is a good database for people who want to try learning techniques and pattern recognition methods on real-world data while spending minimal efforts on preprocessing and formatting. The original black and white (bilevel) images from NIST were size normalized to fit in a 20x20 pixel box while preserving their aspect ratio. The resulting images contain grey levels as a result of the anti-aliasing technique used by the normalization algorithm. the images were centered in a 28x28 image by computing the center of mass of the pixels, and translating the image so as to position this point at the center of the 28x28 field.  \\n\\nWith some classification methods (particularly template-based methods, such as SVM and K-nearest neighbors), the error rate improves when the digits are centered by bounding box rather than center of mass. If you do this kind of pre-processing, you should report it in your publications. The MNIST database was constructed from NIST's NIST originally designated SD-3 as their training set and SD-1 as their test set. However, SD-3 is much cleaner and easier to recognize than SD-1. The reason for this can be found on the fact that SD-3 was collected among Census Bureau employees, while SD-1 was collected among high-school students. Drawing sensible conclusions from learning experiments requires that the result be independent of the choice of training set and test among the complete set of samples. Therefore it was necessary to build a new database by mixing NIST's datasets.  \\n\\nThe MNIST training set is composed of 30,000 patterns from SD-3 and 30,000 patterns from SD-1. Our test set was composed of 5,000 patterns from SD-3 and 5,000 patterns from SD-1. The 60,000 pattern training set contained examples from approximately 250 writers. We made sure that the sets of writers of the training set and test set were disjoint. SD-1 contains 58,527 digit images written by 500 different writers. In contrast to SD-3, where blocks of data from each writer appeared in sequence, the data in SD-1 is scrambled. Writer identities for SD-1 is available and we used this information to unscramble the writers. We then split SD-1 in two: characters written by the first 250 writers went into our new training set. The remaining 250 writers were placed in our test set. Thus we had two sets with nearly 30,000 examples each. The new training set was completed with enough examples from SD-3, starting at pattern # 0, to make a full set of 60,000 training patterns. Similarly, the new test set was completed with SD-3 examples starting at pattern # 35,000 to make a full set with 60,000 test patterns. Only a subset of 10,000 test images (5,000 from SD-1 and 5,000 from SD-3) is available on this site. The full 60,000 sample training set is available.\\n\\nDownloaded from openml.org.\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1591,13 +1591,15 @@
     "# and see how our optimized models performs\n",
     "from scipy.ndimage.interpolation import shift\n",
     "\n",
-    "def shift_image_by_x_y_direction_amount(image ,x,y):\n",
-    "    return shift(image, [x, y], cval = 0)"
+    "def shift_image(image, dx, dy):\n",
+    "    image = image.reshape(28, 28)\n",
+    "    shifted_image = shift(image, [dy, dx], cval=0, mode=\"constant\")\n",
+    "    return shifted_image.reshape(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1620,41 +1622,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAOcAAADnCAYAAADl9EEgAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjMsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+AADFEAAAGO0lEQVR4nO3dO2iU6xqG4RWNx+Cxi2It2HhASSF4\nBK3UVixEqwhqmogIKSwF7TR2YiXaBFOkUQxoIYKkUDyAKQIiFtqEKGihSHa7N2TeWcZx55nkukof\nvjU/Lm9/8GO0Y3p6+h8gz6K5fgBgZuKEUOKEUOKEUOKEUJ1Ndn+UC39fx0w/6M0JocQJocQJocQJ\nocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJ\nocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJ\nocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJocQJ\nocQJocQJocQJocQJocQJocQJocQJocQJoTrn+gH4X79+/Sr3L1++/NXPHxwcbLh9//69PDs+Pl7u\nN2/eLPcLFy403O7du1eeXb58eblfunSp3C9fvlzuc8GbE0KJE0KJE0KJE0KJE0KJE0KJE0K555zB\nhw8fyv3Hjx/l/uzZs3J/+vRpw21qaqo8OzQ0VO5zadOmTeV+/vz5ch8eHm64rVq1qjy7devWct+7\nd2+5J/LmhFDihFDihFDihFDihFDihFDihFAd09PT1V6O7erFixflfuDAgXL/29+pTLV48eJyv337\ndrl3dXXN+rM3bNhQ7uvWrSv3zZs3z/qz/w86ZvpBb04IJU4IJU4IJU4IJU4IJU4ItSCvUiYnJ8u9\np6en3CcmJlr5OC3V7NmbXTk8fvy44bZ06dLy7EK9YmoBVynQTsQJocQJocQJocQJocQJocQJoRbk\nX425fv36cr927Vq5j4yMlPv27dvLva+vr9wr27ZtK/fR0dFyb/a1rTdv3jTcrl+/Xp6ltbw5IZQ4\nIZQ4IZQ4IZQ4IZQ4IZQ4IdSC/D7nn/r69Wu5N/vn6np7extut27dKs/euXOn3E+cOFHuRPJ9Tmgn\n4oRQ4oRQ4oRQ4oRQ4oRQ4oRQC/L7nH9q9erVf3R+zZo1sz7b7B70+PHj5b5okd+P24X/UxBKnBBK\nnBBKnBBKnBBKnBBKnBDK9znnwLdv3xpuR44cKc8+efKk3B88eFDuhw4dKnfmhO9zQjsRJ4QSJ4QS\nJ4QSJ4QSJ4RylRJmYmKi3Hfs2FHua9euLff9+/eX+86dOxtuZ8+eLc92dMx4I0BzrlKgnYgTQokT\nQokTQokTQokTQokTQrnnbDPDw8Plfvr06XJv9s8XVq5cuVLuJ0+eLPfu7u5Zf/Y8554T2ok4IZQ4\nIZQ4IZQ4IZQ4IZQ4IZR7znnm9evX5d7f31/uo6Ojs/7sM2fOlPvAwEC5b9y4cdaf3ebcc0I7ESeE\nEieEEieEEieEEieEEieEcs+5wExNTZX7yMhIw+3UqVPl2Sa/lv45ePBguT969Kjc5zH3nNBOxAmh\nxAmhxAmhxAmhxAmhXKXwry1btqzcf/78We5Lliwp94cPHzbc9u3bV55tc65SoJ2IE0KJE0KJE0KJ\nE0KJE0KJE0J1zvUD0FqvXr0q96GhoXIfGxtruDW7x2xmy5Yt5b5nz54/+u/PN96cEEqcEEqcEEqc\nEEqcEEqcEEqcEMo9Z5jx8fFyv3HjRrnfv3+/3D99+vTbz/RvdXbWv5y6u7vLfdEi74r/5mcDQokT\nQokTQokTQokTQokTQokTQrnn/Aua3SXevXu34TY4OFieff/+/WweqSV27dpV7gMDA+V+9OjRVj7O\nvOfNCaHECaHECaHECaHECaHECaHECaHcc87g8+fP5f727dtyP3fuXLm/e/fut5+pVXp6esr94sWL\nDbdjx46VZ30fs7X8bEIocUIocUIocUIocUIocUKoeXuVMjk52XDr7e0tz758+bLcJyYmZvVMrbB7\n9+5y7+/vL/fDhw+X+4oVK377mfg7vDkhlDghlDghlDghlDghlDghlDghVOw95/Pnz8v96tWr5T42\nNtZw+/jx46yeqVVWrlzZcOvr6yvPNvvrJ7u6umb1TOTx5oRQ4oRQ4oRQ4oRQ4oRQ4oRQ4oRQHdPT\n03P9DMAMvDkhlDghlDghlDghlDghlDgh1H8AKTj7X7n30HEAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<Figure size 432x288 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2862, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-26-d4dd0181d5d2>\", line 6, in <module>\n",
+      "    X_train_augmented.append(shift_image(image, dx, dy))\n",
+      "  File \"<ipython-input-20-b2e432f62bcb>\", line 7, in shift_image\n",
+      "    shifted_image = shift(image, [dy, dx], cval=0, mode=\"constant\")\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/scipy/ndimage/interpolation.py\", line 529, in shift\n",
+      "    filtered = spline_filter(input, order, output=numpy.float64)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/scipy/ndimage/interpolation.py\", line 135, in spline_filter\n",
+      "    spline_filter1d(input, order, axis, output=output, mode=mode)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/scipy/ndimage/interpolation.py\", line 104, in spline_filter1d\n",
+      "    _nd_image.spline_filter1d(input, order, axis, output, mode)\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 1806, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1090, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 311, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 345, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/inspect.py\", line 1490, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/inspect.py\", line 1448, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/home/sergio/anaconda3/lib/python3.6/inspect.py\", line 733, in getmodule\n",
+      "    if ismodule(module) and hasattr(module, '__file__'):\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
     }
    ],
    "source": [
-    "new_image = shift_image_by_x_y_direction_amount(some_digit_image, 4, 0)\n",
-    "plt.imshow(new_image, cmap = 'binary')\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (xi, yi) in zip(X_train, y_train):\n",
-    "    for shift_tuple in [(4,0), (-4, 0), (0, 4), (0, -4)]:\n",
-    "        image = xi.reshape(28, 28)\n",
-    "        new_image = shift_image_by_x_y_direction_amount(image, shift_tuple[0], shift_tuple[1])\n",
-    "        new_data = new_image.reshape(1, 784)\n",
-    "        yi = yi.reshape(1, 1)\n",
-    "        np.append(X_train, new_data, axis = 0)\n",
-    "        np.append(y_train, yi)"
+    "X_train_augmented = [image for image in X_train]\n",
+    "y_train_augmented = [label for label in y_train]\n",
+    "\n",
+    "for dx, dy in ((1, 0), (-1, 0), (0, 1), (0, -1)):\n",
+    "    for image, label in zip(X_train, y_train):\n",
+    "        X_train_augmented.append(shift_image(image, dx, dy))\n",
+    "        y_train_augmented.append(label)"
    ]
   },
   {
@@ -1665,7 +1707,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train.shape"
+    "X_train_augmented = np.array(X_train_augmented)"
    ]
   },
   {
@@ -1676,7 +1718,7 @@
    },
    "outputs": [],
    "source": [
-    "y_train.shape"
+    "y_train_augmented = np.array(y_train_augmented)"
    ]
   },
   {
@@ -1700,11 +1742,69 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [{'weights': [\"uniform\", \"distance\"], 'n_neighbors': [3, 4, 5]}]\n",
+    "\n",
     "knn_clf = KNeighborsClassifier()\n",
-    "knn_clf.fit(X_train_scaled, y_train)\n",
-    "y_predictions = knn_clf.predict(X_train)\n",
-    "accuracy_score(y_train, y_predictions)"
+    "grid_search = GridSearchCV(knn_clf, param_grid, cv=5, verbose=3)\n",
+    "grid_search.fit(X_train, y_train)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# later tonight try to test your model using a support-vector machine then test it using logistic regression\n",
+    "# fine tune this models using gridsearch then use ensemble methods and see how your model compares\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
