--- a/Support_Vector_Machines_notes.ipynb
+++ b/Support_Vector_Machines_notes.ipynb
@@ -410,21 +410,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2) What is a support vector?\n"
+    "# 2) What is a support vector?\n",
+    "\n",
+    "A support vector are the instances that are located on the 'streets'. The decision boundary is determined by the support vectors. Instances that are not support vectors have no influence on the decision boundary\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) Why is it important to scale the inputs when using SVMs?"
+    "# 3) Why is it important to scale the inputs when using SVMs?\n",
+    "\n",
+    "SVM decides the decision boundary based on the support vectors. If features are not on the same scale it can result in the support vectors machine neglecting features with small scales"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4) Can an SVM classifier output a confidence score when it classifies a instance? what about a probability?"
+    "# 4) Can an SVM classifier output a confidence score when it classifies a instance? what about a probability?\n",
+    "\n",
+    "SVM cannot output an probability unless we set the probability =True which will result in the probability methods being added, they can output a confidence score"
    ]
   },
   {
@@ -441,6 +447,13 @@
     "# 6) Say you've trained an SVM classifier with an RBF kernel, but it seems to underfit the training set. Should you increase or descrease gamma? What about C?\n",
     "\n",
     "C can be seen as inversely related to lambda, descreasing C increases lambda. We should then increase C in order to decrease the regularizing term. gamma is similar to C, increase it for an underfitting model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7) How should you set the QP parameters to solve the soft margin linear SVM clssifier problems using an off-the shelf QP solver?"
    ]
   },
   {
