--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,16 +1885,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)"
+       "['y_predictions_svm_clf.pkl']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(y_predictions, 'y_predictions_svm_clf.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9895833333333334"
+      ]
+     },
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
