--- a/Model_Evaluation_and_Hyperparameter_tuning.ipynb
+++ b/Model_Evaluation_and_Hyperparameter_tuning.ipynb
@@ -1049,6 +1049,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pipe_svc.pkl']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# saving model\n",
+    "import joblib\n",
+    "\n",
+    "joblib.dump(pipe_svc, 'pipe_svc.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
