--- a/Ensemble_Learning.ipynb
+++ b/Ensemble_Learning.ipynb
@@ -109,6 +109,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.argmax(np.bincount([0, 0, 1], weights = [0.2, 0.2, 0.6]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.58, 0.42])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex = np.array([[0.9, 0.1],\n",
+    "              [0.8, 0.2],\n",
+    "              [0.4, 0.6]])\n",
+    "p = np.average(ex, axis = 0, weights = [0.2, 0.2, 0.6])\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "iris = datasets.load_iris()\n",
+    "X, y = iris.data[50:, [1, 2]], iris.target[50:]\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.5, random_state = 42, stratify = y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import numpy as np\n",
+    "\n",
+    "clf1 = LogisticRegression(penalty = 'l2', C = 0.001, solver = 'lbfgs', random_state = 42)\n",
+    "clf2 = DecisionTreeClassifier(max_depth = 1, criterion = 'entropy', random_state = 42)\n",
+    "clf3 = KNeighborsClassifier(n_neighbors = 1, p = 2,\n",
+    "                           metric = 'minkowski')\n",
+    "pipe1 = Pipeline([['sc', StandardScaler()],\n",
+    "                 ['clf', clf1]])\n",
+    "pipe3 = Pipeline([['sc', StandardScaler()],\n",
+    "                 ['clf', clf3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "mv_clf = VotingClassifier(estimators = [pipe1, clf2, pipe3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
