--- a/Support_Vector_Machines_notes.ipynb
+++ b/Support_Vector_Machines_notes.ipynb
@@ -447,7 +447,7 @@
    "source": [
     "# 5) Should you use the primal or the dual form of the SVM problem to train a model with on a training set with millions of instances and hundred of features\n",
     "\n",
-    "The dual form is faster to solve when the number of training instances is smaller than the \n"
+    "The dual form is faster to solve when the number of training instances is smaller than the number of features. from this case listed above it would be faster to solve the primal version of the SVM problem.\n"
    ]
   },
   {
